[package]
authors = ["Oliver Schneider <priroda-tsm-i-77ksi-11f77i@oli-obk.de>"]
description = "A graphical debugger for Rust MIR."
license = "MIT/Apache-2.0"
name = "priroda"
repository = "https://github.com/oli-obk/priroda"
version = "0.1.0"

[dependencies]
env_logger = "0.3.3"
log = "0.3.6"
log_settings = "0.1.1"
hyper = "0.9.7"
open = "1.1.1"
promising-future = "0.2"
horrorshow = "0.5.6"
miri = { path = "../miri" }
serde_derive = "0.8.22"
serde_json = "0.8.4"
serde = "0.8.22"
