[package]
authors = ["Oliver Schneider <priroda-tsm-i-77ksi-11f77i@oli-obk.de>"]
description = "A graphical debugger for Rust MIR."
license = "MIT/Apache-2.0"
name = "priroda"
repository = "https://github.com/oli-obk/priroda"
version = "0.1.0"

[dependencies]
env_logger = "0.4.1"
log = "0.3.6"
log_settings = "0.1.1"
hyper = "0.10.5"
open = "1.2.0"
promising-future = "0.2.4"
miri = { path = "../miri" }
serde_derive = "0.9"
serde_json = "0.9"
serde = "0.9"
